@@ -14,29 +14,36 @@
 
 package org.eclipse.gemini.blueprint.compendium.internal.cm;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+
 import java.util.HashMap;
 import java.util.Map;
-
-import junit.framework.TestCase;
 
 import org.eclipse.gemini.blueprint.TestUtils;
 import org.eclipse.gemini.blueprint.compendium.MultipleSetters;
 import org.eclipse.gemini.blueprint.compendium.OneSetter;
-import org.eclipse.gemini.blueprint.compendium.internal.cm.DefaultManagedServiceBeanManager;
 import org.eclipse.gemini.blueprint.mock.MockBundleContext;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
 
 /**
  * 
  * @author Costin Leau
  * 
  */
-public class DefaultManagedServiceBeanManagerTest extends TestCase {
+public class DefaultManagedServiceBeanManagerTest {
 
 	private DefaultManagedServiceBeanManager msbm;
 	private ConfigurationAdminManager cam;
 	private Map configuration;
 
-	protected void setUp() throws Exception {
+	@Before
+	public void setup() throws Exception {
 		cam = new ConfigurationAdminManager("bla", new MockBundleContext()) {
 			public Map getConfiguration() {
 				return configuration;
@@ -44,7 +51,8 @@ public class DefaultManagedServiceBeanManagerTest extends TestCase {
 		};
 	}
 
-	protected void tearDown() throws Exception {
+	@After
+	public void tearDown() throws Exception {
 		msbm = null;
 		cam = null;
 	}
@@ -57,26 +65,31 @@ public class DefaultManagedServiceBeanManagerTest extends TestCase {
 		return (Map) TestUtils.getFieldValue(msbm, "instanceRegistry");
 	}
 
+	@Test
 	public void testNoUpdateStrategy() {
 		msbm = new DefaultManagedServiceBeanManager(false, null, cam, null);
 		assertNull(getUpdateCallback());
 	}
 
+	@Test
 	public void testBeanManagedUpdateStrategy() {
 		msbm = new DefaultManagedServiceBeanManager(false, "update", cam, null);
 		assertTrue(getUpdateCallback().getClass().getName().endsWith("BeanManagedUpdate"));
 	}
 
+	@Test
 	public void testContainerManagedUpdateStrategy() {
 		msbm = new DefaultManagedServiceBeanManager(true, null, cam, null);
 		assertTrue(getUpdateCallback().getClass().getName().endsWith("ContainerManagedUpdate"));
 	}
 
+	@Test
 	public void testChainedManagedUpdateStrategy() {
 		msbm = new DefaultManagedServiceBeanManager(true, "update", cam, null);
 		assertTrue(getUpdateCallback().getClass().getName().endsWith("ChainedManagedUpdate"));
 	}
 
+	@Test
 	public void testRegister() {
 		configuration = new HashMap();
 		msbm = new DefaultManagedServiceBeanManager(false, null, cam, null);
@@ -85,6 +98,7 @@ public class DefaultManagedServiceBeanManagerTest extends TestCase {
 		assertTrue(getBeanMap().containsValue(bean));
 	}
 
+	@Test
 	public void testUnregister() {
 		msbm = new DefaultManagedServiceBeanManager(false, null, cam, null);
 		Object bean = new Object();
@@ -94,32 +108,35 @@ public class DefaultManagedServiceBeanManagerTest extends TestCase {
 		assertFalse(getBeanMap().containsValue(bean));
 	}
 
+	@Test
 	public void testUpdated() {
 		msbm = new DefaultManagedServiceBeanManager(false, null, cam, null);
 	}
 
+	@Test
 	public void testInjectInfoSimple() {
 		Map props = new HashMap();
 		props.put("prop", "14");
 		OneSetter instance = new OneSetter();
 		msbm = new DefaultManagedServiceBeanManager(true, null, cam, null);
 		msbm.applyInitialInjection(instance, props);
-		assertEquals(new Long(14), instance.getProp());
+		assertEquals(Long.valueOf(14), instance.getProp());
 	}
 
+	@Test
 	public void testMultipleSetters() {
 		Map props = new HashMap();
 		props.put("prop", "14");
-		props.put("integer", new Double(14));
-		props.put("dbl", new Float(14));
+		props.put("integer", Double.valueOf(14));
+		props.put("dbl", Float.valueOf(14));
 		props.put("none", "14");
 		props.put("float", "14");
 		MultipleSetters instance = new MultipleSetters();
 		msbm = new DefaultManagedServiceBeanManager(true, null, cam, null);
 		msbm.applyInitialInjection(instance, props);
-		assertEquals(new Double(14), instance.getDbl());
+		assertEquals(Double.valueOf(14), instance.getDbl());
 		assertEquals(14, instance.getInteger());
-		assertEquals(new Long(14), instance.getProp());
-		assertEquals(new Float(0), new Float(instance.getFloat()));
+		assertEquals(Long.valueOf(14), instance.getProp());
+		assertEquals(Float.valueOf(0), Float.valueOf(instance.getFloat()));
 	}
 }
