@@ -15,17 +15,21 @@
 
 package org.eclipse.gemini.blueprint.iandt.dependency;
 
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNotSame;
+import static org.junit.Assert.assertNull;
+
 import java.io.FilePermission;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.PropertyPermission;
 
 import org.eclipse.gemini.blueprint.iandt.BaseIntegrationTest;
+import org.eclipse.gemini.blueprint.util.OsgiStringUtils;
+import org.junit.Test;
 import org.osgi.framework.AdminPermission;
 import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleException;
 import org.osgi.framework.ServiceReference;
-import org.eclipse.gemini.blueprint.util.OsgiStringUtils;
 
 /**
  * Crucial test for the asych, service-dependency waiting. Installs several
@@ -51,6 +55,7 @@ public class DependencyTest extends BaseIntegrationTest {
 	// simple.service2 - publishes service2
 	// simple.service3 - publishes service3
 	// simple 		   - publishes service
+	@Test
 	public void testDependencies() throws Exception {
 		// waitOnContextCreation("org.eclipse.gemini.blueprint.iandt.simpleservice");
 
@@ -69,13 +74,13 @@ public class DependencyTest extends BaseIntegrationTest {
 		assertNotNull("Cannot find the simple service 3 bundle", simpleService3Bundle);
 		assertNotNull("dependencyTest can't be resolved", dependencyTestBundle);
 
-		assertNotSame("simple service bundle is in the activated state!", new Integer(Bundle.ACTIVE), new Integer(
+		assertNotSame("simple service bundle is in the activated state!", Integer.valueOf(Bundle.ACTIVE), Integer.valueOf(
 			simpleServiceBundle.getState()));
 
-		assertNotSame("simple service 2 bundle is in the activated state!", new Integer(Bundle.ACTIVE), new Integer(
+		assertNotSame("simple service 2 bundle is in the activated state!", Integer.valueOf(Bundle.ACTIVE), Integer.valueOf(
 			simpleService2Bundle.getState()));
 
-		assertNotSame("simple service 3 bundle is in the activated state!", new Integer(Bundle.ACTIVE), new Integer(
+		assertNotSame("simple service 3 bundle is in the activated state!", Integer.valueOf(Bundle.ACTIVE), Integer.valueOf(
 			simpleService3Bundle.getState()));
 
 		startDependencyAsynch(dependencyTestBundle);
